k8s/testingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-mailhog
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: s4hell-improved-dollop-5w5pprvj4vgh4qw9-43243.preview.app.github.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailhog
                port:
                  number: 8025
